[tool.poetry]
name = "pyback"
version = "0.1.0"
description = "A sample python backend"
authors = ["Vladimir Klepov <vklepov@ozon.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.291"

[tool.ruff]
select = ["E", "F", "B", "N", "S", "I", "D"]
# Avoid enforcing line-length violations
ignore = ["E501"]
fixable = ["ALL"]
# Avoid trying to fix flake8-bugbear
unfixable = ["B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
